fixed logout-btn and scrollbar on contacts and board

--- a/style/mobile_style/m_style_contacts.css
+++ b/style/mobile_style/m_style_contacts.css
@@ -52,7 +52,7 @@
     }
 
     .mobile-edit-contact-btn {
-        background-image: url('../img/pencil-btn-default.svg');
+        background-image: url('../../img/pencil-btn-default.svg');
         background-repeat: no-repeat;
         width: 4em;
         height: 4em;
@@ -174,6 +174,7 @@
 
     .slide-bar-scroll::-webkit-scrollbar {
         width: 0.5em;
+        display: block;
     }
 
     .slide-bar-scroll::-webkit-scrollbar-track {
@@ -200,7 +201,7 @@
         height: 12px;
         width: 16px;
         background-position: center 7px;
-        background-image: url(../img/scroll-arrow-up.svg);
+        background-image: url(../../img/scroll-arrow-up.svg);
     }
 
     /* Down */
@@ -208,7 +209,7 @@
         height: 12px;
         width: 16px;
         background-position: center 2px;
-        background-image: url(../img/scroll-arrow-down.svg);
+        background-image: url(../../img/scroll-arrow-down.svg);
     }
 }
 
