--- a/style/style_header.css
+++ b/style/style_header.css
@@ -50,6 +50,8 @@ header {
     gap: 5px;
     opacity: 0;
     transition: opacity 220ms ease;
+    /*von Pierre, damit logout btn auf addTask und Contacts, anklickbar ist.*/
+    z-index: 1;
 }
 
 .mobile-menu>a, .logout-btn>a {
@@ -59,13 +61,13 @@ header {
     cursor: pointer;
 }
 
-.show{
+.show {
     opacity: 1;
     transition: opacity 220ms ease;
 }
 
-.hide{
-   opacity: 0;
+.hide {
+    opacity: 0;
     transition: opacity 220ms ease;
 }
 
